--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.14",
     "shortid": "^2.2.16",
     "slugify": "^1.6.1"
   }
