--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
   "copyright": "Copyright 2017-2020 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "private": true,
+  "proxy": "http://localhost:2000",
   "repository": {
     "type": "git",
     "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
@@ -34,6 +35,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "axios": "^0.23.0",
     "classnames": "^2.2.6",
     "core-js": "^3.9.1",
     "enzyme": "^3.11.0",
