--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,12 +2,14 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -18,7 +20,8 @@
     "react-step-progress-bar": "^1.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "set PORT=4000 && react-scripts start",
