--- a/back-end/config.env
+++ b/back-end/config.env
@@ -1,3 +1,6 @@
 PORT=8000
 DATABASE_SECRET_KEY=mongodb+srv://mehr:mehr2000@cluster0.meawe.mongodb.net/virtualShalmi?retryWrites=true&w=majority
 JWT_SECERT_KEY=FYPGROUPMEHREENSAJIDSYEDIRTAZANAVEEDMINAHILKHALID
+CLOUD_NAME=dvmy3c4pl
+CLOUD_API_KEY=357115975256387
+CLOUD_API_SECRET_KEY=QEX6PCPTM0IyVHb64-4x58WdIyo
