--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.7",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
